= HEAD

* Make head plugin work with not_allowed plugin if loaded after (jeremyevans) (#92)

= 2.17.0 (2016-08-13)

* Add :postprocessor option to assets plugin, for postprocessing assets (e.g. autoprefixing CSS) (celsworth) (#86)

* Fix path passed to rack apps when using r.run and the type_routing plugin (jeremyevans) (#82)

* Support :classes option to error_handler plugin for overriding which exception classes to rescue (jeremyevans)

* Support :layout_opts=>:merge_locals option in render plugin for merging view template locals into layout template locals (jeremyevans) (#80)

* Support :sri option to assets plugin to enable subresource integrity (jeremyevans)

* Add run_append_slash plugin, so r.run uses "/" instead of "" for app's PATH_INFO (kenaniah) (#77)

= 2.16.0 (2016-07-13)

* Add type_routing plugin, for routing based on path extensions and Accept headers (Papierkorb, jeremyevans) (#75)

* Add unescape_path plugin, for decoding URL-encoded PATH_INFO before routing (jeremyevans) (#74)

* Add request_headers plugin, for simpler access to request headers (celsworth) (#72)

= 2.15.0 (2016-06-13)

* Add public plugin for r.public method for serving all files in the public directory (jeremyevans)

* Make send_file in sinatra_helpers plugin work with Rack 2 (jeremyevans)

* Make :header matcher prefixes the env key with HTTP_ if application :header_matcher_prefix option is set (timothypage, jeremyevans) (#69)

* Add content_for plugin :append option to support appending to the existing content (evanleck, jeremyevans) (#66)

= 2.14.0 (2016-05-13)

* Add symbol_status plugin for using symbols as status codes (Papierkorb) (#65)

* Make middleware plugin also run the application's middleware (jeremyevans)

= 2.13.0 (2016-04-14)

* Add :check_paths and :allowed_paths to render plugin options to avoid security issues with template rendering (jeremyevans)

= 2.12.0 (2016-03-15)

* Allow error handler access to the request's remaining_path (jeremyevans)
